--- a/cfgs/centerpoint_pillar02_secfpn_cyclic_aicv.yaml
+++ b/cfgs/centerpoint_pillar02_secfpn_cyclic_aicv.yaml
@@ -18,16 +18,13 @@ DATA_CONFIG:
             VOXEL_SIZE: [ 0.2, 0.2, 6.0 ]
             MAX_POINTS_PER_VOXEL: 20
             MAX_NUMBER_OF_VOXELS: {
-                'train': 56000,
-                'test': 56000
+                'train': 40000,
+                'test': 40000
             }
 MODEL:
-    NAME: 
-
+    NAME: CenterPoint
     DENSE_HEAD:
         NAME: CenterHead
-
-
     POST_PROCESSING:
         NMS_CONFIG:
             MULTI_CLASSES_NMS: False
