optimize code and style

--- a/cfgs/centerpoint_pillar02_secfpn_cyclic_aicv.yaml
+++ b/cfgs/centerpoint_pillar02_secfpn_cyclic_aicv.yaml
@@ -45,7 +45,7 @@ MODEL:
 
     DENSE_HEAD:
         NAME: CenterHead
-        OUT_SIZE_FACTOR: 4
+        DOWNSAMPLE_SIZE: 4
         CLASS_AGNOSTIC: False
         CLASS_NAMES_EACH_HEAD: [
             ['Car'],
